<resources>
    <string name="app_name">Bobi</string>
    <string name="hint_username" translatable="false">Your username goes here</string>
    <string name="hint_password" translatable="false">Your password goes here</string>
    <string name="action_authenticate" translatable="false">Login</string>
    <string name="save_credentials" translatable="false">Save credentials</string>
    <string name="invalid_credentials" translatable="false">*Invalid Credentials*</string>
    <string name="title_activity_list">ListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>