<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97007DB6"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/fill_username"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@android:color/white"
        android:backgroundTint="#15629F"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"

        />

    <TextView
        android:id="@+id/wrong_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invalid_credentials"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/fill_password"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@android:color/white"
        android:backgroundTint="#15629F"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:text="@string/save_credentials"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BF3408"
        android:backgroundTint="@android:color/white"
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="false"
        android:text="@string/action_authenticate"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:iconTint="#A81F1F"
        app:rippleColor="@android:color/background_light" />

</LinearLayout>